# RegXplorer

./: CMakeLists.txt  README.md  test.c++  test.txt
include/: regex_search_engine.h
src/: main.cpp
src/gui/: main_window.cpp  main_window.h
